--- a/Drag.html
+++ b/Drag.html
@@ -3,9 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
-		<style>
-			.div1{position: absolute;top:0;left: 0; width: 150px;height: 150px;background: red;}
-		</style>
+		<link href="css/styles.css">
 		<!--<script type="text/javascript" src="DRAG.js" ></script>-->
 		<script src="js/jquery-1.11.3.min.js"></script>
 		<script>
